crates/vetric/tests/ui/labels/unsupported_attribute.stderr
error: Unsupported attribute; only `crate`, `rename_all`, `format` and `label` are supported (see `vetric` crate docs for details)
 --> tests/ui/labels/unsupported_attribute.rs:4:11
  |
4 | #[metrics(what = 42)]
  |           ^^^^
